test/spec_vectors/table_fill/fail/module_4.wat
(module (table $t 10 externref) (func $type-length-empty-vs-i32 (table.fill $t (i32.const 1) (ref.null extern))))